bump lib ver to 2.5.1